strimzi-kafka-operator/templates/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-operator-to-clusters
spec:
  podSelector: {}
  egress:
    - ports:
        - protocol: TCP
          port: 2181
        - protocol: TCP
          port: 9090
        - protocol: TCP
          port: 9091
        - protocol: TCP
          port: 9092
        - protocol: TCP
          port: 9093
  policyTypes:
    - Egress
